--- a/.github/workflows/md-6.10.yml
+++ b/.github/workflows/md-6.10.yml
@@ -6,7 +6,7 @@ name: CI Test md-6.10
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "md-6.10" ]
+    branches: [ "md-6.10_base" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
